# root-rag

./: .gitignore  AGENTS.md  README.md  coverage.json  deep-research-report.md  explore_graph.py  pyproject.toml  rebuild_graph.py  rebuild_graph_fast.py  run_atomic_probes.py
.github/: copilot-instructions.md
artifacts/: corpus.jsonl
benchmark/: agent_failure_scorecard.yaml  agent_failure_tasks.yaml  agent_failure_tasks_v2.yaml  tasks.yaml
configs/: baseline_manifest.json  benchmark_corpus_files.txt  benchmark_corpus_profiles.json  benchmark_qrels.jsonl  benchmark_qrels_extended.jsonl  benchmark_qrels_fairship_muondis_retrieval_forest.jsonl  benchmark_qrels_semantic.jsonl  benchmark_queries.json  benchmark_queries_fairship_muondis_retrieval_forest.json  benchmark_queries_semantic.json  benchmark_query_subsets.json  fairship_golden_queries.json  retrieval_forest_profiles.json  root_sofie_minimal_corpus.jsonl  root_sofie_minimal_external_manifest.json  seed_corpus_root_636.yaml  sofie_corpus_root_636.yaml  support_matrix.yaml  tier1_corpus_root_636.yaml
docs/: GROUND_TRUTH.md  HOW_TO_GUIDE.md  QUERY_SYNTAX_GUIDE.md  QUICK_QUERY_REFERENCE.md  architecture.md  baseline_contract.md  baseline_vs_candidate_template.md  benchmark_mode_alignment.md  definition_of_done.md  extract_usage_script.md  fairship_extraction.md  prompt_gpt.md  quickstart.md  retrieval_iteration_2026-03-29_lexnorm.md  retrieval_quality_checks.md
plans/: s1_v1_implementation_note_2026-04-04.md  semantic_s0_accepted_2026-04-02.md
query_packs/: README.md  fairship_muon_dis_operational.yaml  fairship_muondis_query_pack_v1.yaml  fairship_muondis_query_pack_v2.yaml  muonDIS.yaml  muon_dis_workflow.yaml
schemas/: claim_audit.schema.json
scripts/: agent_preflight.py  agent_review_muon_dis_qrels.py  aggregate_ablation.py  analyze_recovery.py  archive_emv_runs.py  audit_benchmark_failures.py  audit_bridge_light_split_geometry.py  build_benchmark_corpus.py  build_extended_benchmark_corpus.py  build_retrieval_forest_indexes.py  build_semantic_index.py  chunk_code.py  create_mock_fairship.py  diagnose_query_competition.py  emv_preflight.py  emv_status.py  evaluate_muon_dis_retrieval.py  extract_fairship_root_usage.py  freeze_muon_dis_benchmark.py  generate_weekly_report.py  index_fairship.py  index_project_docs.py  ingest_lxplus_muondis_result.py  lint_wiki_claims.py  lxplus_muondis_oracle_probe.py  lxplus_muondis_preflight.sh  lxplus_muondis_smoke_commands.sh  print_muon_dis_review_sheet.py  promote_muon_dis_qrels.py  promote_report_to_wiki_stub.py  render_lxplus_muondis_checklist.py  review_muon_dis_qrels.py  (+15 more)
(+330 files in other folders)
