[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "root-rag"
version = "0.0.1"
description = "Root RAG - A hybrid retrieval-based RAG system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "FisicoFabi"}]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[project.scripts]
root-rag = "root_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
