[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "root-rag"
version = "0.2.0"
description = "Root RAG - A hybrid retrieval-based RAG system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "FisicoFabi"}]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]
s1 = [
    "numpy>=1.26",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0",
]
# Optional dependencies for the root-level code-graph scripts
# (rebuild_graph.py, rebuild_graph_fast.py, explore_graph.py).
# NOTE: these scripts also import `graphify`, which is not published on PyPI
# and must be obtained separately. See README "Code-graph scripts (advanced)".
graph = [
    "networkx>=3.0",
]

[project.scripts]
root-rag = "root_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
cache_dir = "artifacts/pytest_cache"
testpaths = ["tests"]
norecursedirs = ["data", "artifacts", ".venv", ".git"]
